fixed an issue with swagger not providing parameters
