# routes/students.js
@@ -1,11 +1,10 @@
-// This is the Routes file
 const router = require('express').Router();
 
 const studentsController = require('../controllers/students');
 const { studentRules, checkValidation, studentIdParam } = require('../utilities/validator');
 const utilities = require("../utilities/");
 
-// GET ALL
+// GET ALL STUDENTS
 router.get(
     '/',
     //#swagger.tags = ['student']
@@ -13,7 +12,7 @@ router.get(
     utilities.handleErrors(studentsController.getAll)
 );
 
-// GET SINGLE
+// GET SINGLE STUDENT
 router.get(
     '/:studentId',
     //#swagger.tags = ['student']
@@ -23,27 +22,57 @@ router.get(
     utilities.handleErrors(studentsController.getSingle)
 );
 
-// POST
+// POST STUDENT
 router.post(
     '/',
-    //#swagger.tags = ['student']
-    //#swagger.summary = 'Create a new student'
+    /* #swagger.tags = ['student']
+       #swagger.summary = 'Create a new student'
+       #swagger.parameters['body'] = {
+           in: 'body',
+           description: 'Student object to add',
+           required: true,
+           schema: {
+               "studentId": "S1001",
+               "firstName": "John",
+               "lastName": "Doe",
+               "email": "john.doe@email.com",
+               "age": 20,
+               "major": "Computer Science",
+               "enrolledCourses": ["C101", "C102"]
+           }
+       }
+    */
     studentRules(),
     checkValidation,
     utilities.handleErrors(studentsController.addStudent)
 );
 
-// PUT
+// PUT STUDENT
 router.put(
     '/:studentId',
-    //#swagger.tags = ['student']
-    //#swagger.summary = 'Update a student'
+    /* #swagger.tags = ['student']
+       #swagger.summary = 'Update a student'
+       #swagger.parameters['body'] = {
+           in: 'body',
+           description: 'Updated student object',
+           required: true,
+           schema: {
+               "studentId": "S1001",
+               "firstName": "John",
+               "lastName": "Doe",
+               "email": "john.doe@email.com",
+               "age": 20,
+               "major": "Computer Science",
+               "enrolledCourses": ["C101", "C102"]
+           }
+       }
+    */
     studentRules(),
     checkValidation,
     utilities.handleErrors(studentsController.editStudent)
 );
 
-// DELETE
+// DELETE STUDENT
 router.delete(
     '/:studentId',
     //#swagger.tags = ['student']
